[package]
name = "simple-bevy-physics"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3

[build]
rustc-wrapper = "sccache"
